fix bento grid on mobile

--- a/src/components/Bento/bento.module.css
+++ b/src/components/Bento/bento.module.css
@@ -213,9 +213,9 @@
     .bento {
         padding: 1rem;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
+        grid-template-rows: auto;
         gap: 1rem;
-        height: 200vh;
+        height: auto;
         width: 100vw;
     }
 
